fix font of primary nav
125% is too large.

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
 
 .primarycoursenav h1{
-font-size:125%;
+font-size:110%;
 }
 .primarycoursenav li{
 list-style-type:none;
